<resources>
    <string name="app_name">Shoppingoo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="brandname">Brand Name</string>
    <string name="reviewerName">Name</string>
    <string name="comment">Comment</string>
    <string name="brand">Brands</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
    <string name="number">0</string>
    <string name="favourite">Favourite</string>
    <string name="AddToCard">Add To Card</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="login">Login</string>
    <string name="createNewAcc"><u>If you do not have an account pleas click here</u></string>
    <string name="haveAcc"><u>If you  already have an account pleas click here</u></string>
    <string name="search">Search Here</string>
    <string name="All">All</string>
    <string name="Me">Me</string>
    <string name="Welcome">Welcome</string>
    <string name="Others">Others</string>
    <string name="More">more</string>
    <string name="pleaseLogin">Please Login</string>
    <string name="Login">Login</string>
    <string name="WishList">WishList</string>
    <string name="Price">Price </string>
    <string name="CreatedBy">Created at: </string>
    <string name="removeItem">Delete Item</string>
    <string name="message">Are you sure, you want to delete iteme?</string>
    <string name="noResultFound">No Result Found </string>
    <!--
    <string name="TotalPrice">Total Price:</string>
    <string name="Quantity">Quantity:</string>
    -->
    <string name="subCategories">Sub Categories</string>
    <string name="Orders">Orders</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderSummary">Order Summary</string>
    <string name="phoneNum">Phone Number</string>
    <string name="YourItems">Your Items</string>
    <string name="YourOrder">Your Order</string>
    <string name="fees">Fees</string>
    <string name="yourAddress">Your Address</string>
    <string name="paymentMethod">Payment Method</string>
    <string name="noData">"Not available yet!"</string>
    <string name="noItem">"No product in your shopping cart!"</string>
    <string name="noOrder">"You have no order in progress!"</string>
    <string name="noWhishlist">"You have no Favourite in progress!"</string>
    <string name="noFav">"You currently have nothing saved to your Favourite list!"</string>


    <!-- Asmaa   -->
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="sales">Sales</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="currency">Currency</string>
    <string name="sign_out">Sign Out</string>
    <string name="eur_t_u20ac">EUR</string>
    <string name="usd_t">USD</string>
    <string name="egp">EGP</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="alex">Alex</string>
    <string name="add_new_address">Add New Address</string>
    <string name="country">Country: </string>
    <string name="city">City:</string>
    <string name="area">Area:</string>
    <string name="phone1">phone:</string>
    <string name="save_address">Save Address</string>
    <string name="shpping_cart">Shpping Cart</string>
    <string name="sub_total">SubTotal:</string>
    <string name="sub_total_value" translatable="false">0.0 $</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="no_available_coupons">No Available Coupons</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="map_key" translatable="false">AIzaSyAaA_lkRjuS3w40Z-8Lufy_fZLfllSHCUg</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="zip">Zip:</string>
    <string name="system_default">System Default.</string>
    <string name="contact_us">Contact Us!</string>
    <string name="welcome_to_our_application">Welcome to our application.</string>
    <string name="contact_us_dialog_text">If you found any problem, please send us an email to improve our services.</string>
    <string name="send_email">Send Email</string>
    <string name="cancel">Cancel</string>
    <string name="address2">Address:</string>


    <string name="TotalPrice">Total:</string>
    <string name="Quantity">Quantity:</string>
    <string name="choose_address">Choose Address</string>
    <string name="please_select_your_shipping_address">Please select your shipping address or click in plus icon to add new.</string>
    <string name="varaince">varaince</string>
    <string name="applay">applay</string>
    <string name="no_data_to_display">No Data To Display</string>
    <string name="click_here_to_choose_location">Click Here To Choose Location</string>
    <string name="write_any_city_name">Write Any City Name</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="_0_0">0.0</string>
    <string name="place_order">Place Order</string>
    <string name="discount">Discount:</string>
    <string name="apply">Apply</string>
    <string name="add_discount_code">Add Discount Code</string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Method</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="reload">reload</string>
    <string name="delete">Delete</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="choose">Choose your favourite brand</string>
    <string name="Home">Home</string>
    <string name="Category">Category</string>
    <string name="share_our_app">Share Our App</string>
    <string name="orderId">Order Id</string>

    <!-- Arrays -->

    <string-array name="currency_options">
        <item>EGP</item>
        <item>USD \t$</item>
        <item>EUR \t€</item>


    </string-array>


</resources>