<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:padding="8dp"
    app:cardCornerRadius="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/userCountryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/userCityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userCountryText" />
        <TextView
            android:id="@+id/userAddressLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userCityText" />

        <TextView
            android:id="@+id/userPhoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone1"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userAddressLine1"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>