<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/dialog_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.9"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:background="@drawable/contact_us_dialog_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/txtDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/removeItem"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDialogInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/message"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/dialoImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/delete_item_bg"
            android:src="@drawable/ic_baseline_delete_24"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/dialog_layout"
            app:layout_constraintTop_toTopOf="@id/dialog_layout"
            app:layout_constraintStart_toStartOf="@id/dialog_layout"
            app:layout_constraintEnd_toEndOf="@id/dialog_layout"/>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/dialog_layout"
            app:layout_constraintEnd_toEndOf="@id/dialog_layout"
            app:layout_constraintTop_toBottomOf="@id/dialog_layout"
            app:layout_constraintBottom_toBottomOf="@id/dialog_layout"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/delete"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/buttons"
                android:background="@color/buttons"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"

                />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:backgroundTint="@color/buttons"
                android:background="@color/buttons"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>