<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userProfileBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_bar_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/userProfileBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_profile"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/tool_bar_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/doneTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="Done"
            android:textAlignment="center"
            android:textColor="@color/tool_bar_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/user_profile_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_24"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/txtEditUserProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/edit"
        android:textAlignment="center"
        android:textColor="@color/tool_bar_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProfileBar"/>

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:textColor="@color/tool_bar_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEditUserProfile" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/last_name"
        android:textAlignment="center"
        android:textColor="@color/tool_bar_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEditText" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textColor="@color/tool_bar_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameEditText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/tool_bar_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>