<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".me.view.setting.AddNewAddressFragment">

    <ImageView
        android:id="@+id/chooseLocationImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHeight_percent="0.3"
        android:src="@drawable/choose_location_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseLocationImg"
        android:visibility="visible">
        <TextView
            android:id="@+id/countryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/country"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:padding="16dp"
            app:layout_constraintWidth_percent="0.8" />
        <TextView
            android:id="@+id/cityText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/countryText"
            android:text="@string/city"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintWidth_percent="0.8"
          />
        <TextView
            android:id="@+id/areaText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityText"
            android:text="@string/city"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent="0.8"
            />
        <TextView
            android:id="@+id/phoneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/areaText"
            android:text="@string/phone1"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent="0.8"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddNewAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTintMode="src_over"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_address"
        android:textSize="20sp"
        app:backgroundTint="@color/teal_700"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>